--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<div style="text-align:center">
-  <h1>
+<div style="text-align:center ">
+  <h1 class="slideInDown">
     Welcome to {{title}}!
   </h1>
+  <button type="button" class="btn btn-primary waves-light" mdbRippleRadius>Primary</button>
+
 </div>
-<pre>{{ dogs | json}}</pre>
+<!-- <app-google-map></app-google-map> -->
+<!-- <pre class="slideInDown">{{ dogs | json}}</pre> -->
+<router-outlet></router-outlet>
