footer fix to bottom

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<div style="text-align:center ">
+<!-- <div style="text-align:center ">
   <h1 class="slideInDown">
     Welcome to {{title}}!
   </h1>
   <button type="button" class="btn btn-primary waves-light" mdbRippleRadius>Primary</button>
 
 </div>
-<!-- <app-google-map></app-google-map> -->
-<!-- <pre class="slideInDown">{{ dogs | json}}</pre> -->
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<div id="container">
+  <div id="header">header</div>
+  <div id="body">body</div>
+  <div id="footer">footer</div>
+</div>
