--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,30 @@
 .slideInDown {
     border: 1px solid rebeccapurple;
 }
+
+
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+#container {
+   min-height:100%;
+//    position:relative;
+}
+#header {
+   background:#ff0;
+   padding:10px;
+}
+#body {
+   padding:10px;
+   padding-bottom:60px;   /* Height of the footer */
+}
+#footer {
+   position: fixed;;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
+   background:#6cf;
+}
